EULA.txt & layer.conf: Update to license v39
Signed-off-by: Ann Thornton <ann.thornton@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -10,7 +10,23 @@ BBFILE_PATTERN_fsl-bsp-release := "^${LAYERDIR}"
 BBFILE_PRIORITY_fsl-bsp-release = "8"
 LAYERSERIES_COMPAT_fsl-bsp-release = "warrior zeus"
 
-HOSTTOOLS_NONFATAL_append = " bc xxd"
+# Define new EULAs and add them to the list defined in meta-freescale.
+# See fsl-eula-unpack.bbclass.
+FSL_EULA_FILE_MD5SUMS_append = " \
+    ${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V10} \
+    ${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V11} \
+    ${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V34} \
+    ${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V36} \
+    ${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V37} \
+    ${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V38} \
+    ${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V39} \
+"
+
+# Override the EULA defined in meta-freescale.
+FSL_EULA_FILE = "${LAYERDIR}/../EULA.txt"
+FSL_EULA_FILE_MD5SUM = "${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V39}"
+
+HOSTTOOLS_NONFATAL_append = " bc rsync xxd"
 
 CONNECTIVITY_CHECK_URIS = "https://yoctoproject.org/connectivity.html"
 
