imx8mmevk.conf/imx8mpevk.conf/imx8mnevk.conf: Update description as consolidated machine
As both LDRR4 and DDR4 EVK can share the same rootfs,
- Use consolidated machine to build the shared rootfs.
- Include all DTBs of EVK boards in wic images.
- Set the default boot loader as LDRR4 EVK.

Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/machine/imx8mpevk.conf
+++ b/meta-bsp/conf/machine/imx8mpevk.conf
@@ -1,4 +1,8 @@
-# DEPRECATED: Machine is renamed, please use imx8mp-lpddr4-evk
+#@TYPE: Machine
+#@NAME: i.MX 8MP Consolidated`Machine
+#@DESCRIPTION: A consolidated machine for i.MX 8MP LPDDR4 and DDR4 EVK
+#@MAINTAINER: Jun Zhu <junzhu@nxp.com>
+
 MACHINEOVERRIDES =. "imx8mp-lpddr4-evk:"
 require conf/machine/imx8mp-lpddr4-evk.conf
 
