--- a/meta-bsp/conf/machine/imx8mmevk.conf
+++ b/meta-bsp/conf/machine/imx8mmevk.conf
@@ -1,4 +1,8 @@
-# DEPRECATED: Machine is renamed, please use imx8mm-lpddr4-evk
+#@TYPE: Machine
+#@NAME: i.MX 8MM Consolidated Machine
+#@DESCRIPTION: A consolidated machine for i.MX 8MM LPDDR4 and DDR4 EVK
+#@MAINTAINER: Jun Zhu <junzhu@nxp.com>
+
 MACHINEOVERRIDES =. "imx8mm-lpddr4-evk:"
 require conf/machine/imx8mm-lpddr4-evk.conf
 
