--- a/meta-bsp/conf/machine/imx8mnevk.conf
+++ b/meta-bsp/conf/machine/imx8mnevk.conf
@@ -1,4 +1,8 @@
-# DEPRECATED: Machine is renamed, please use imx8mn-lpddr4-evk
+#@TYPE: Machine
+#@NAME: i.MX 8MN Consolidated Machine
+#@DESCRIPTION: A consolidated machine for i.MX 8MN LPDDR4 and DDR4 EVK
+#@MAINTAINER: Jun Zhu <junzhu@nxp.com>
+
 MACHINEOVERRIDES =. "imx8mn-lpddr4-evk:"
 require conf/machine/imx8mn-lpddr4-evk.conf
 
