imx8_all.conf: Add 3 panel DTB for i.MX 8QM/8QXP [LF-7621]
- imx8qm-mek-dsi-rm67199.dtb
- imx8qxp-mek-dsi-rm67199.dtb
- imx8qxp-mek-dsi-rm67199-rpmsg.dtb

Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -295,6 +295,7 @@ IMAGE_BOOT_FILES:append:imx8mq-evk = " \
 # Overrides for imx8qm-mek.conf
 MACHINE_FEATURES:append:imx8qm-mek = " nxp8997"
 KERNEL_DEVICETREE:append:imx8qm-mek = " \
+    freescale/imx8qm-mek-dsi-rm67199.dtb \
     freescale/imx8qm-mek-sof.dtb \
 "
 RDEPENDS:${KERNEL_PACKAGE_NAME}-image:imx8qm-mek = ""
@@ -305,6 +306,8 @@ IMXBOOT_TARGETS_SD:prepend:imx8qm-mek = \
 # Overrides for imx8qxp-mek.conf
 MACHINE_FEATURES:append:imx8qxp-mek = " nxp8997"
 KERNEL_DEVICETREE:append:imx8qxp-mek = " \
+    freescale/imx8qxp-mek-dsi-rm67199.dtb \
+    freescale/imx8qxp-mek-dsi-rm67199-rpmsg.dtb \
     freescale/imx8qxp-mek-sof.dtb \
 "
 RDEPENDS:${KERNEL_PACKAGE_NAME}-image:imx8qxp-mek = ""
