--- a/meta-bsp/conf/machine/imx8_all.conf
+++ b/meta-bsp/conf/machine/imx8_all.conf
@@ -130,6 +130,7 @@ KERNEL_DEVICETREE += " \
 KERNEL_DEVICETREE += "freescale/imx8qm-mek.dtb \
                      freescale/imx8qm-mek-ca53.dtb freescale/imx8qm-mek-ca72.dtb \
                      freescale/imx8qm-mek-dsi-rm67191.dtb \
+                     freescale/imx8qm-mek-dsi-rm67199.dtb \
                      freescale/imx8qm-mek-enet2-tja1100.dtb freescale/imx8qm-mek-esai.dtb \
                      freescale/imx8qm-mek-hdmi.dtb \
                      freescale/imx8qm-mek-hdmi-rx.dtb \
@@ -158,6 +159,8 @@ KERNEL_DEVICETREE += "freescale/imx8qxp-mek.dtb freescale/imx8qxp-mek-a0.dtb \
                      freescale/imx8qxp-mek-dpu-lcdif.dtb \
                      freescale/imx8qxp-mek-dpu-lcdif-rpmsg.dtb \
                      freescale/imx8qxp-mek-dsi-rm67191.dtb freescale/imx8qxp-mek-dsi-rm67191-rpmsg.dtb \
+                     freescale/imx8qxp-mek-dsi-rm67199.dtb \
+                     freescale/imx8qxp-mek-dsi-rm67199-rpmsg.dtb \
                      freescale/imx8qxp-mek-enet2-tja1100.dtb freescale/imx8qxp-mek-enet2.dtb \
                      freescale/imx8qxp-mek-it6263-lvds0-dual-channel.dtb freescale/imx8qxp-mek-it6263-lvds0-dual-channel-rpmsg.dtb \
                      freescale/imx8qxp-mek-it6263-lvds1-dual-channel.dtb freescale/imx8qxp-mek-it6263-lvds1-dual-channel-rpmsg.dtb \
