--- a/meta-bsp/recipes-graphics/wayland/weston-init/imx-nxp-bsp/weston.ini
+++ b/meta-bsp/recipes-graphics/wayland/weston-init/imx-nxp-bsp/weston.ini
@@ -5,7 +5,7 @@ idle-time=0
 #xwayland=true
 #repaint-window=16
 #enable-overlay-view=1
-modules=screen-share.so
+#modules=screen-share.so
 
 #[shell]
 #size=1920x1080
@@ -28,5 +28,5 @@ touchscreen_calibrator=true
 #transform=rotate-90
 
 [screen-share]
-command=@bindir@/weston --backend=rdp-backend.so --shell=fullscreen-shell.so --no-clients-resize --rdp-tls-cert=/etc/freerdp/keys/server.crt --rdp-tls-key=/etc/freerdp/keys/server.key
+command=@bindir@/weston --backend=rdp-backend.so --shell=fullscreen-shell.so --no-clients-resize
 #start-on-startup=true
