meta-bsp/conf/layer.conf: Update for example.com failure
Signed-off-by: Lauren Post <lauren.post@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -28,6 +28,8 @@ FSL_EULA_FILE_MD5SUM = "${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V34}"
 
 HOSTTOOLS_NONFATAL_append = " bc rsync xxd"
 
+CONNECTIVITY_CHECK_URIS = "https://yoctoproject.org/connectivity.html"
+
 # optee is no longer a valid distro feature. Use machine feature to remove, like this:
 # MACHINE_FEATURES_remove = "optee"
 # DEPRECATED: The ability to remove optee from the build is deprecated and
