meta-bsp/conf/layer.conf: Update for example.com failure
Signed-off-by: Lauren Post <lauren.post@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -12,6 +12,8 @@ LAYERSERIES_COMPAT_fsl-bsp-release = "warrior zeus"
 
 HOSTTOOLS_NONFATAL_append = " bc xxd"
 
+CONNECTIVITY_CHECK_URIS = "https://yoctoproject.org/connectivity.html"
+
 # optee is no longer a valid distro feature. Use machine feature to remove, like this:
 # MACHINE_FEATURES_remove = "optee"
 # DEPRECATED: The ability to remove optee from the build is deprecated and
