--- a/meta-bsp/conf/machine/imx8_all.conf
+++ b/meta-bsp/conf/machine/imx8_all.conf
@@ -227,6 +227,8 @@ KERNEL_DEVICETREE += "freescale/imx93-11x11-evk.dtb \
                       freescale/imx93-11x11-evk-mt9m114.dtb \
                       freescale/imx93-11x11-evk-root.dtb \
                       freescale/imx93-11x11-evk-rm67199.dtb \
+                      freescale/imx93-14x14-evk.dtb \
+                      freescale/imx93-14x14-evk-rm67199.dtb \
                       freescale/imx93-9x9-qsb.dtb \
                       freescale/imx93-9x9-qsb-can1.dtb \
                       freescale/imx93-9x9-qsb-flexspi-m2.dtb \
