--- a/meta-bsp/conf/machine/imx93evk.conf
+++ b/meta-bsp/conf/machine/imx93evk.conf
@@ -9,6 +9,8 @@ require conf/machine/imx93-11x11-lpddr4x-evk.conf
 
 # Include device trees for other boards for internal test
 KERNEL_DEVICETREE += " \
+        freescale/imx93-14x14-evk.dtb \
+        freescale/imx93-14x14-evk-rm67199.dtb \
         freescale/imx93-9x9-qsb.dtb \
         freescale/imx93-9x9-qsb-can1.dtb \
         freescale/imx93-9x9-qsb-flexspi-m2.dtb \
