--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -73,7 +73,7 @@ PREFERRED_PROVIDER_nativesdk-u-boot-tools = "nativesdk-${IMX_DEFAULT_UBOOTTOOLS}
 PREFERRED_PROVIDER_u-boot-mkimage-native = "${IMX_DEFAULT_UBOOTTOOLS}-native"
 PREFERRED_PROVIDER_nativesdk-u-boot-mkimage = "nativesdk-${IMX_DEFAULT_UBOOTTOOLS}"
 
-# Avoid multiple runtime providers for u-boot-default-env
+PREFERRED_RPROVIDER_linux-firmware-bcm4359-pcie ??= "linux-firmware"
 PREFERRED_RPROVIDER_u-boot-default-env ??= "${IMX_DEFAULT_BOOTLOADER}"
 
 MACHINE_SOCARCH_FILTER:remove = "alsa-lib gstreamer1.0 imx-codec"
