imx93-XXX.conf: Install new M33 app to boot partition [YOCIMX-6733]
the new app is imx93_m33_TCM_power_mode_switch.bin

Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/machine/imx93-9x9-lpddr4-qsb.conf
+++ b/meta-bsp/conf/machine/imx93-9x9-lpddr4-qsb.conf
@@ -32,6 +32,7 @@ DDR_FIRMWARE_NAME = " \
 SECO_FIRMWARE_NAME:mx9-nxp-bsp = "mx93a0-ahab-container.img"
 
 IMAGE_BOOT_FILES:append:use-nxp-bsp = " \
+        imx93_m33_TCM_power_mode_switch.bin \
         imx93_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
         imx93_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
 "
