--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -16,6 +16,7 @@ LAYERSERIES_COMPAT_imx-demo:append = " langdale"
 
 # Define new EULAs and add them to the list defined in meta-freescale.
 # See fsl-eula-unpack.bbclass.
+FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V39 = "5a0bf11f745e68024f37b4724a5364fe"
 FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V40 = "add2d392714d3096ed7e0f7e2190724b"
 
 FSL_EULA_FILE_MD5SUMS:append = " \
