--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -17,14 +17,16 @@ LAYERSERIES_COMPAT_imx-demo:append = " langdale"
 # Define new EULAs and add them to the list defined in meta-freescale.
 # See fsl-eula-unpack.bbclass.
 FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V40 = "add2d392714d3096ed7e0f7e2190724b"
+FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V42 = "ea25d099982d035af85d193c88a1b479"
 
 FSL_EULA_FILE_MD5SUMS:append = " \
     ${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V40} \
+    ${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V42} \
 "
 
 # Override the EULA defined in meta-freescale.
-FSL_EULA_FILE = "${LAYERDIR}/../EULA.txt"
-FSL_EULA_FILE_MD5SUM = "${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V40}"
+FSL_EULA_FILE = "${LAYERDIR}/../LICENSE.txt"
+FSL_EULA_FILE_MD5SUM = "${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V42}"
 
 # FIXME: Drop xxd if/when xxd-native can be used instead
 HOSTTOOLS_NONFATAL:append = " xxd cert-to-efi-sig-list"
