meta-bsp/conf/layer.conf:  Use old name of license
Signed-off-by: Lauren Post <lauren.post@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -35,7 +35,7 @@ FSL_EULA_FILE_MD5SUMS_append = " \
 "
 
 # Override the EULA defined in meta-freescale.
-FSL_EULA_FILE = "${LAYERDIR}/../LICENSE.txt"
+FSL_EULA_FILE = "${LAYERDIR}/../EULA.txt"
 FSL_EULA_FILE_MD5SUM = "${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V42}"
 
 HOSTTOOLS_NONFATAL_append = " bc rsync xxd"
