layer.conf: Drop redundant firmware-imx-vpu-imx8* operations
Signed-off-by: Tom Hochstein <tom.hochstein@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -85,11 +85,9 @@ MACHINE_FIRMWARE:append:mx8-nxp-bsp      = " firmware-imx-sdma-imx7d"
 
 MACHINE_FIRMWARE:append:mx6ulz-nxp-bsp = " firmware-imx-epdc"
 MACHINE_FIRMWARE:append:mx8-nxp-bsp    = " linux-firmware-ath10k"
-MACHINE_FIRMWARE:append:mx8qm-nxp-bsp  = " firmware-imx-vpu-imx8 firmware-imx-hdmi firmware-imx-xuvi-imx8 sof-imx sof-zephyr zephyr-demo-imx"
-MACHINE_FIRMWARE:remove:mx8qxp-nxp-bsp = "firmware-imx-vpu-imx8qxp"
-MACHINE_FIRMWARE:append:mx8qxp-nxp-bsp = " firmware-imx-vpu-imx8 sof-imx sof-zephyr zephyr-demo-imx"
-MACHINE_FIRMWARE:remove:mx8dx-nxp-bsp  = "firmware-imx-vpu-imx8qxp"
-MACHINE_FIRMWARE:append:mx8dx-nxp-bsp  = " firmware-imx-vpu-imx8 sof-imx sof-zephyr"
+MACHINE_FIRMWARE:append:mx8qm-nxp-bsp  = " firmware-imx-hdmi firmware-imx-xuvi-imx8 sof-imx sof-zephyr zephyr-demo-imx"
+MACHINE_FIRMWARE:append:mx8qxp-nxp-bsp = " sof-imx sof-zephyr zephyr-demo-imx"
+MACHINE_FIRMWARE:append:mx8dx-nxp-bsp  = " sof-imx sof-zephyr"
 MACHINE_FIRMWARE:append:mx8mnul-nxp-bsp = " firmware-imx-easrc-imx8mn"
 MACHINE_FIRMWARE:remove:mx8mp-nxp-bsp  = "firmware-sof-imx"
 MACHINE_FIRMWARE:append:mx8mp-nxp-bsp  = " sof-imx sof-zephyr zephyr-demo-imx"
