imx8ulp-*: Align with meta-freescale
Signed-off-by: Tom Hochstein <tom.hochstein@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -326,5 +326,10 @@ IMXBOOT_TARGETS_SD:prepend:imx8dxl-ddr3l-evk = \
     "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'flash_linux_m4 flash_linux_m4_no_v2x', \
                                                        'flash_regression_linux_m4', d)} "
 
+# Overrides for imx8ulp-lpddr4-evk.conf
+IMXBOOT_TARGETS_SD:imx8ulp-lpddr4-evk   = "flash_singleboot_m33 flash_singleboot flash_dualboot_m33 flash_dualboot"
+IMXBOOT_TARGETS_FSPI:imx8ulp-lpddr4-evk = "flash_singleboot_m33_flexspi flash_dualboot_flexspi"
+IMXBOOT_TARGETS_ND:imx8ulp-lpddr4-evk   = "flash_singleboot_m33"
+
 # Create a mirror for unreliable packages
 MIRRORS += "http://sourceforge.net/.* http://www.nxp.com/lgfiles/updates/other"
