--- a/meta-bsp/conf/machine/imx8ulp-9x9-lpddr4-evk.conf
+++ b/meta-bsp/conf/machine/imx8ulp-9x9-lpddr4-evk.conf
@@ -8,17 +8,16 @@ require include/imx8ulp-evk.inc
 
 KERNEL_DEVICETREE_BASENAME = "imx8ulp-9x9-evk"
 KERNEL_DEVICETREE += " \
-    freescale/imx8ulp-9x9-evk-i3c.dtb \
-    freescale/imx8ulp-9x9-evk-lpa.dtb \
-    freescale/imx8ulp-9x9-evk-lpspi.dtb \
-    freescale/imx8ulp-9x9-evk-lpspi-slave.dtb \
-    freescale/imx8ulp-9x9-evk-sof-btsco.dtb \
-    freescale/imx8ulp-9x9-evk-rk055hdmipi4m.dtb \
-    freescale/imx8ulp-9x9-evk-rk055hdmipi4mv2.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-i3c.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-lpa.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-lpspi.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-lpspi-slave.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-sof-btsco.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-rk055hdmipi4m.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-rk055hdmipi4mv2.dtb \
 "
 
 UBOOT_CONFIG_BASENAME = "imx8ulp_9x9_evk"
 
 MACHINE_FEATURES += "soc-reva1"
 UPOWER_FIRMWARE_NAME = "upower_a1.bin"
-SECO_FIRMWARE_NAME = "mx8ulpa1-ahab-container.img"
