imx93-*: Align with meta-freescale
Signed-off-by: Tom Hochstein <tom.hochstein@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -331,5 +331,35 @@ IMXBOOT_TARGETS_SD:imx8ulp-lpddr4-evk   = "flash_singleboot_m33 flash_singleboot
 IMXBOOT_TARGETS_FSPI:imx8ulp-lpddr4-evk = "flash_singleboot_m33_flexspi flash_dualboot_flexspi"
 IMXBOOT_TARGETS_ND:imx8ulp-lpddr4-evk   = "flash_singleboot_m33"
 
+# Overrides for imx93-9x9-lpddr4-qsb.conf
+MACHINE_FEATURES:append:imx93-9x9-lpddr4-qsb = " dpdk"
+MACHINE_FIRMWARE:append:imx93-9x9-lpddr4-qsb = " ethos-u-firmware"
+WKS_FILE_DEPENDS:append:imx93-9x9-lpddr4-qsb = " imx-m33-demos"
+IMAGE_BOOT_FILES:append:imx93-9x9-lpddr4-qsb = " \
+    imx93_m33_TCM_power_mode_switch.bin \
+    imx93_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
+    imx93_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
+"
+
+# Overrides for imx93-11x11-lpddr4x-evk.conf
+MACHINE_FEATURES:append:imx93-11x11-lpddr4x-evk = " dpdk"
+MACHINE_FIRMWARE:append:imx93-11x11-lpddr4x-evk = " ethos-u-firmware"
+WKS_FILE_DEPENDS:append:imx93-11x11-lpddr4x-evk = " imx-m33-demos"
+IMAGE_BOOT_FILES:append:imx93-11x11-lpddr4x-evk = " \
+    imx93_m33_TCM_power_mode_switch.bin \
+    imx93_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
+    imx93_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
+"
+
+# Overrides for imx93-14x14-lpddr4x-evk.conf
+MACHINE_FEATURES:append:imx93-14x14-lpddr4x-evk = " dpdk"
+MACHINE_FIRMWARE:append:imx93-14x14-lpddr4x-evk = " ethos-u-firmware"
+WKS_FILE_DEPENDS:append:imx93-14x14-lpddr4x-evk = " imx-m33-demos"
+IMAGE_BOOT_FILES:append:imx93-14x14-lpddr4x-evk = " \
+    imx93_m33_TCM_power_mode_switch.bin \
+    imx93_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
+    imx93_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
+"
+
 # Create a mirror for unreliable packages
 MIRRORS += "http://sourceforge.net/.* http://www.nxp.com/lgfiles/updates/other"
