--- a/meta-bsp/conf/machine/imx93-14x14-lpddr4x-evk.conf
+++ b/meta-bsp/conf/machine/imx93-14x14-lpddr4x-evk.conf
@@ -6,28 +6,19 @@
 
 MACHINEOVERRIDES =. "mx93:"
 
-require include/imx93-evk.inc
+require conf/machine/include/imx93-evk.inc
 
 KERNEL_DEVICETREE_BASENAME = "imx93-14x14-evk"
 
-KERNEL_DEVICETREE += " \
-      freescale/imx93-14x14-evk-rm67199.dtb \
+KERNEL_DEVICETREE:append:use-nxp-bsp = " \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-rm67199.dtb \
 "
 
 UBOOT_CONFIG_BASENAME = "imx93_14x14_evk"
 
 DDR_FIRMWARE_NAME = " \
-        lpddr4_dmem_1d_v202201.bin \
-        lpddr4_dmem_2d_v202201.bin \
-        lpddr4_imem_1d_v202201.bin \
-        lpddr4_imem_2d_v202201.bin \
+    lpddr4_dmem_1d_v202201.bin \
+    lpddr4_dmem_2d_v202201.bin \
+    lpddr4_imem_1d_v202201.bin \
+    lpddr4_imem_2d_v202201.bin \
 "
-
-SECO_FIRMWARE_NAME:mx9-nxp-bsp = "mx93a0-ahab-container.img"
-
-IMAGE_BOOT_FILES:append:use-nxp-bsp = " \
-        imx93_m33_TCM_power_mode_switch.bin \
-        imx93_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
-        imx93_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
-"
-WKS_FILE_DEPENDS:append = " imx-m33-demos"
