--- a/meta-bsp/conf/machine/imx8ulp-9x9-lpddr4-evk.conf
+++ b/meta-bsp/conf/machine/imx8ulp-9x9-lpddr4-evk.conf
@@ -7,7 +7,8 @@
 require include/imx8ulp-evk.inc
 
 KERNEL_DEVICETREE_BASENAME = "imx8ulp-9x9-evk"
-KERNEL_DEVICETREE += " \
+
+KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     freescale/${KERNEL_DEVICETREE_BASENAME}-i3c.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-lpa.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-lpspi.dtb \
