imx8ulp-9x9-lpddr4-evk: Align with upstream
Signed-off-by: Tom Hochstein <tom.hochstein@nxp.com>

--- a/meta-bsp/conf/machine/imx8ulp-9x9-lpddr4-evk.conf
+++ b/meta-bsp/conf/machine/imx8ulp-9x9-lpddr4-evk.conf
@@ -4,7 +4,7 @@
 #@DESCRIPTION: Machine configuration for NXP i.MX 8ULP 9x9 Evaluation Kit with LPDDR4
 #@MAINTAINER: Jun Zhu <junzhu@nxp.com>
 
-require include/imx8ulp-evk.inc
+require conf/machine/include/imx8ulp-evk.inc
 
 KERNEL_DEVICETREE_BASENAME = "imx8ulp-9x9-evk"
 
