LICENSE.txt, meta-bsp/conf/layer.conf: updated license to v44
Signed-off-by: Ann Thornton <ann.thornton@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -18,15 +18,17 @@ LAYERSERIES_COMPAT_imx-demo:append = " langdale"
 # See fsl-eula-unpack.bbclass.
 FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V40 = "add2d392714d3096ed7e0f7e2190724b"
 FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V42 = "ea25d099982d035af85d193c88a1b479"
+FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V44 = "d7853b7bf2936b2c25c893eac7033374"
 
 FSL_EULA_FILE_MD5SUMS:append = " \
     ${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V40} \
     ${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V42} \
+    ${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V44} \
 "
 
 # Override the EULA defined in meta-freescale.
 FSL_EULA_FILE = "${LAYERDIR}/../LICENSE.txt"
-FSL_EULA_FILE_MD5SUM = "${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V42}"
+FSL_EULA_FILE_MD5SUM = "${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V44}"
 
 # FIXME: Drop xxd if/when xxd-native can be used instead
 HOSTTOOLS_NONFATAL:append = " xxd cert-to-efi-sig-list"
