imx93evk.conf: Update NAME and DESCRIPTION information [YOCIMX-6898]
Announced this machine configure as the consolidated machine,
- Its rootfs can be shared by i.MX 93 LPDDR4x and LPDDR4 boards.
- The default boot loader in wic image is for i.MX 93 LPDDR4x EVK.

Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/machine/imx93evk.conf
+++ b/meta-bsp/conf/machine/imx93evk.conf
@@ -1,7 +1,7 @@
 #@TYPE: Machine
-#@NAME: i.MX 93 EVK
+#@NAME: i.MX 93 Consolidated rootfs machine
 #@SOC: i.MX93
-#@DESCRIPTION: Machine configuration for NXP i.MX 93 Evaluation Kit
+#@DESCRIPTION: A Consolidated machine configuration for NXP i.MX 93 LPDDR4x and LPDDR4 EVK
 #@MAINTAINER: Jun Zhu <junzhu@nxp.com>
 
 MACHINEOVERRIDES =. "imx93-11x11-lpddr4x-evk:"
