imx8ulpevk.conf: Update NAME and DESCRIPTION fields [YOCIMX-6898]
Announced this machine configure as the consolidated machine,
- Its rootfs can be shared by i.MX 8ULP LPDDR4 boards.
- The default boot loader in wic image is for i.MX 8ULP LPDDR4 EVK.

Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/machine/imx8ulpevk.conf
+++ b/meta-bsp/conf/machine/imx8ulpevk.conf
@@ -1,7 +1,7 @@
 #@TYPE: Machine
-#@NAME: i.MX 8ULP EVK
+#@NAME: i.MX 8ULP consolidated rootfs machine
 #@SOC: i.MX8ULP
-#@DESCRIPTION: Machine configuration for NXP i.MX 8ULP Evaluation Kit
+#@DESCRIPTION: A consolidated machine configuration for NXP i.MX 8ULP LPDDR4 Evaluation Kit
 #@MAINTAINER: Jun Zhu <junzhu@nxp.com>
 
 MACHINEOVERRIDES =. "imx8ulp-lpddr4-evk:"
