meta-imx: Update LAYERSERIES_COMPAT to mickledore
Signed-off-by: Neena Busireddy <neenareddy.busireddy@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -8,11 +8,11 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "fsl-bsp-release"
 BBFILE_PATTERN_fsl-bsp-release := "^${LAYERDIR}/"
 BBFILE_PRIORITY_fsl-bsp-release = "8"
-LAYERSERIES_COMPAT_fsl-bsp-release = "langdale"
+LAYERSERIES_COMPAT_fsl-bsp-release = "mickledore"
 
 # FIXME: Drop these lines when the external layers are marked compatible
 LAYERSERIES_COMPAT_chromium-browser-layer:append = " langdale"
-LAYERSERIES_COMPAT_imx-demo:append = " langdale"
+LAYERSERIES_COMPAT_imx-demo:append = " mickledore"
 
 # Define new EULAs and add them to the list defined in meta-freescale.
 # See fsl-eula-unpack.bbclass.
