--- a/meta-sdk/conf/layer.conf
+++ b/meta-sdk/conf/layer.conf
@@ -8,7 +8,7 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "fsl-sdk-release"
 BBFILE_PATTERN_fsl-sdk-release := "^${LAYERDIR}/"
 BBFILE_PRIORITY_fsl-sdk-release = "8"
-LAYERSERIES_COMPAT_fsl-sdk-release = "langdale"
+LAYERSERIES_COMPAT_fsl-sdk-release = "mickledore"
 
 BBFILES_DYNAMIC += " \
     chromium-browser-layer:${LAYERDIR}/dynamic-layers/chromium-browser-layer/*/*/*.bb \
