--- a/meta-ml/conf/layer.conf
+++ b/meta-ml/conf/layer.conf
@@ -8,4 +8,4 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "meta-ml"
 BBFILE_PATTERN_meta-ml := "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-ml = "8"
-LAYERSERIES_COMPAT_meta-ml = "langdale"
+LAYERSERIES_COMPAT_meta-ml = "mickledore"
