imx8mnul-ddr3l-evk: Drop machine that is now upstream
Signed-off-by: Tom Hochstein <tom.hochstein@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -253,6 +253,16 @@ IMAGE_BOOT_FILES:append:imx8mn-ddr4-evk = " \
     imx8mn_m7_TCM_sai_low_power_audio.bin \
 "
 
+# Overrides for imx8mnul-ddr3l-evk.conf
+MACHINE_FEATURES_IMX_REMOVALS:append:imx8mnul-ddr3l-evk = " jailhouse"
+WKS_FILE_DEPENDS:append:imx8mnul-ddr3l-evk = " imx-m7-demos"
+IMAGE_BOOT_FILES:append:imx8mnul-ddr3l-evk = " \
+    imx8mnddr3l_m7_TCM_hello_world.bin \
+    imx8mnddr3l_m7_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
+    imx8mnddr3l_m7_TCM_rpmsg_lite_str_echo_rtos.bin \
+    imx8mnddr3l_m7_TCM_sai_low_power_audio.bin \
+"
+
 # Overrides for imx8mp-lpddr4-evk
 #MACHINE_FEATURES_IMX_REMOVALS:append:imx8mp-lpddr4-evk = " jailhouse"
 MACHINE_FEATURES:append:imx8mp-lpddr4-evk = " optee nxp8997 dpdk"
