imx-boot: Build i.MX 8ULP boot loader with A2 sentinel firmware [YOCIMX-6929]
- Set SECO_FIRMWARE_NAME as "mx8ulpa2-ahab-container.img".
- Set REV=A2 in imx-mkimage command line.

Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -43,6 +43,7 @@ MACHINE_USES_VIVANTE_KERNEL_DRIVER_MODULE ?= "0"
 # Override for use-imx-security-controller-firmware.bbclass
 SECO_FIRMWARE_NAME:mx8dxla1-nxp-bsp = "mx8dxla1-ahab-container.img"
 SECO_FIRMWARE_NAME:mx8dxlb0-nxp-bsp = "mx8dxlb0-ahab-container.img"
+SECO_FIRMWARE_NAME:mx8ulp-nxp-bsp   = "mx8ulpa2-ahab-container.img"
 
 # Overrides for imx-base.inc
 IMX_DEFAULT_BSP = "nxp"
