Add 2 dtbs to support audio on i.MX93 [YOCIMX-6948]
 - imx93-14x14-evk-mqs.dtb
 - imx93-14x14-evk-aud-hat.dtb

Signed-off-by: Zelan Zou <zelan.zou@nxp.com>

--- a/meta-bsp/conf/machine/imx93-14x14-lpddr4x-evk.conf
+++ b/meta-bsp/conf/machine/imx93-14x14-lpddr4x-evk.conf
@@ -11,6 +11,8 @@ require conf/machine/include/imx93-evk.inc
 KERNEL_DEVICETREE_BASENAME = "imx93-14x14-evk"
 
 KERNEL_DEVICETREE:append:use-nxp-bsp = " \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-aud-hat.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-mqs.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-rm67199.dtb \
 "
 
