Add DTB imx6ull-14x14-evk-revD.dtb [YOCIMX-6960]
Signed-off-by: Zelan Zou <zelan.zou@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -185,6 +185,9 @@ MACHINE_FEATURES:append:imx6ulevk = " optee"
 
 # Overrides for imx6ullevk.conf
 MACHINE_FEATURES:append:imx6ullevk = " optee"
+KERNEL_DEVICETREE:append:imx6ullevk = " \
+    imx6ull-14x14-evk-revD.dtb \
+"
 
 # Overrides for imx6ulz-14x14-evk.conf
 MACHINE_FEATURES:append:imx6ulz-14x14-evk = " optee"
