--- a/meta-bsp/conf/machine/imx6ull14x14evk.conf
+++ b/meta-bsp/conf/machine/imx6ull14x14evk.conf
@@ -11,7 +11,8 @@ include conf/machine/include/arm/armv7a/tune-cortexa7.inc
 
 KERNEL_DEVICETREE = "imx6ull-14x14-evk.dtb imx6ull-14x14-evk-btwifi.dtb \
                      imx6ull-14x14-evk-emmc.dtb \
-                     imx6ull-14x14-evk-gpmi-weim.dtb"
+                     imx6ull-14x14-evk-gpmi-weim.dtb \
+                     imx6ull-14x14-evk-revD.dtb"
 
 UBOOT_CONFIG ??= "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'sd-optee', 'sd', d)}"
 UBOOT_CONFIG[sd] = "mx6ull_14x14_evk_config,sdcard"
