imx93evk.conf: Add i.MX93 DTB files [YOCIMX-6954]
- imx93-11x11-evk-ld.dtb
- imx93-14x14-evk-tja1103.dtb

Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/machine/imx8_all.conf
+++ b/meta-bsp/conf/machine/imx8_all.conf
@@ -221,6 +221,7 @@ KERNEL_DEVICETREE += "freescale/imx93-11x11-evk.dtb \
                       freescale/imx93-11x11-evk-flexspi-m2.dtb \
                       freescale/imx93-11x11-evk-inmate.dtb \
                       freescale/imx93-11x11-evk-i3c.dtb \
+                      freescale/imx93-11x11-evk-ld.dtb \
                       freescale/imx93-11x11-evk-lpspi-slave.dtb \
                       freescale/imx93-11x11-evk-lpspi.dtb \
                       freescale/imx93-11x11-evk-lpuart.dtb \
@@ -230,6 +231,7 @@ KERNEL_DEVICETREE += "freescale/imx93-11x11-evk.dtb \
                       freescale/imx93-11x11-evk-rm67199.dtb \
                       freescale/imx93-14x14-evk.dtb \
                       freescale/imx93-14x14-evk-aud-hat.dtb \
+                      freescale/imx93-14x14-evk-tja1103.dtb \
                       freescale/imx93-14x14-evk-mqs.dtb \
                       freescale/imx93-14x14-evk-rm67199.dtb \
                       freescale/imx93-9x9-qsb.dtb \
