--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -357,6 +357,9 @@ IMAGE_BOOT_FILES:append:imx93-9x9-lpddr4-qsb = " \
 # Overrides for imx93-11x11-lpddr4x-evk.conf
 MACHINE_FEATURES:append:imx93-11x11-lpddr4x-evk = " dpdk"
 MACHINE_FIRMWARE:append:imx93-11x11-lpddr4x-evk = " ethos-u-firmware"
+KERNEL_DEVICETREE:append:imx93-11x11-lpddr4x-evk = " \
+    freescale/imx93-11x11-evk-ld.dtb \
+"
 WKS_FILE_DEPENDS:append:imx93-11x11-lpddr4x-evk = " imx-m33-demos"
 IMAGE_BOOT_FILES:append:imx93-11x11-lpddr4x-evk = " \
     imx93_m33_TCM_power_mode_switch.bin \
