imx8dxl*-*-evk: Rework SOC REV model
In meta-freescale, the machine config model for SOCs does not account
for different revs of an SOC. But, the 8DXL SOC has an A1 and a B0 rev
that must be accounted for. Currently, that accounting is done by
including the non-revisioned machine config and appending another
machine override with the rev to the hierarchy, specifically `mx8dxla1`
and `mx8dxlb0`.

That sounds okay, but inspecting the resulting `OVERRIDES` reveals that
the design of `machine_overrides_extender.bbclass` does not handle this
implementation well and duplicates many of the overrides.

```
MACHINEOVERRIDES="aarch64:armv8a:use-nxp-bsp:imx-generic-bsp:imx-nxp-bsp:imxfbdev:mx8dxl-generic-bsp:mx8-generic-bsp:mx8-nxp-bsp:mx8x-generic-bsp:mx8x-nxp-bsp:mx8dxl-nxp-bsp:imx8dxl-lpddr4-evk:imx-generic-bsp:imx-nxp-bsp:imxfbdev:mx8-generic-bsp:mx8-nxp-bsp:mx8x-generic-bsp:mx8x-nxp-bsp:mx8dxl-generic-bsp:mx8dxl-nxp-bsp:mx8dxla1-generic-bsp:mx8dxla1-nxp-bsp:mx8dxla1:imx8dxla1-lpddr4-evk"
```

To fix this, a simpler approach is proposed, adding the SOC revision
via a separate variable `IMX_SOC_REV`, and returning the overrides
hierarchy back to its original revision-less form. Full re-use is
maintained in the new model by the addition of revision-less include
files, one for each memory model.

Signed-off-by: Tom Hochstein <tom.hochstein@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -37,9 +37,8 @@ HOSTTOOLS_NONFATAL:append = " xxd cert-to-efi-sig-list"
 MACHINE_USES_VIVANTE_KERNEL_DRIVER_MODULE ?= "0"
 
 # Override for use-imx-security-controller-firmware.bbclass
-SECO_FIRMWARE_NAME:mx8dxla1-nxp-bsp = "mx8dxla1-ahab-container.img"
-SECO_FIRMWARE_NAME:mx8dxlb0-nxp-bsp = "mx8dxlb0-ahab-container.img"
-SECO_FIRMWARE_NAME:mx8ulp-nxp-bsp   = "mx8ulpa2-ahab-container.img"
+SECO_FIRMWARE_NAME:mx8dxl-nxp-bsp = "mx8dxl${IMX_SOC_REV_LOWER}-ahab-container.img"
+SECO_FIRMWARE_NAME:mx8ulp-nxp-bsp = "mx8ulpa2-ahab-container.img"
 
 # Overrides for imx-base.inc
 IMX_DEFAULT_BSP = "nxp"
@@ -316,17 +315,31 @@ IMXBOOT_TARGETS_SD:prepend:imx8qxp-mek = \
     "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'flash_linux_m4', \
                                                        'flash_regression_linux_m4', d)} "
 
-# Overrides for imx8dxl-lpddr4-evk.conf
-MACHINE_FEATURES:append:imx8dxl-lpddr4-evk = " nxp8997"
-RDEPENDS:${KERNEL_PACKAGE_NAME}-image:imx8dxl-lpddr4-evk = ""
-IMXBOOT_TARGETS_SD:prepend:imx8dxl-lpddr4-evk = \
+# Overrides for imx8dxla1-lpddr4-evk.conf
+MACHINE_FEATURES:append:imx8dxla1-lpddr4-evk = " nxp8997"
+RDEPENDS:${KERNEL_PACKAGE_NAME}-image:imx8dxla1-lpddr4-evk = ""
+IMXBOOT_TARGETS_SD:prepend:imx8dxla1-lpddr4-evk = \
     "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'flash_linux_m4 flash_linux_m4_no_v2x ', \
                                                        'flash_regression_linux_m4', d)} "
 
-# Overrides for imx8dxl-ddr3l-evk.conf
-MACHINE_FEATURES:append:imx8dxl-ddr3l-evk = " nxp8997"
-RDEPENDS:${KERNEL_PACKAGE_NAME}-image:imx8dxl-ddr3l-evk = ""
-IMXBOOT_TARGETS_SD:prepend:imx8dxl-ddr3l-evk = \
+# Overrides for imx8dxlb0-lpddr4-evk.conf
+MACHINE_FEATURES:append:imx8dxlb0-lpddr4-evk = " nxp8997"
+RDEPENDS:${KERNEL_PACKAGE_NAME}-image:imx8dxlb0-lpddr4-evk = ""
+IMXBOOT_TARGETS_SD:prepend:imx8dxlb0-lpddr4-evk = \
+    "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'flash_linux_m4 flash_linux_m4_no_v2x ', \
+                                                       'flash_regression_linux_m4', d)} "
+
+# Overrides for imx8dxla1-ddr3l-evk.conf
+MACHINE_FEATURES:append:imx8dxla1-ddr3l-evk = " nxp8997"
+RDEPENDS:${KERNEL_PACKAGE_NAME}-image:imx8dxla1-ddr3l-evk = ""
+IMXBOOT_TARGETS_SD:prepend:imx8dxla1-ddr3l-evk = \
+    "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'flash_linux_m4 flash_linux_m4_no_v2x', \
+                                                       'flash_regression_linux_m4', d)} "
+
+# Overrides for imx8dxlb0-ddr3l-evk.conf
+MACHINE_FEATURES:append:imx8dxlb0-ddr3l-evk = " nxp8997"
+RDEPENDS:${KERNEL_PACKAGE_NAME}-image:imx8dxlb0-ddr3l-evk = ""
+IMXBOOT_TARGETS_SD:prepend:imx8dxlb0-ddr3l-evk = \
     "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'flash_linux_m4 flash_linux_m4_no_v2x', \
                                                        'flash_regression_linux_m4', d)} "
 
