--- a/meta-bsp/conf/machine/imx8dxla1-ddr3l-evk.conf
+++ b/meta-bsp/conf/machine/imx8dxla1-ddr3l-evk.conf
@@ -1,5 +1,6 @@
-MACHINEOVERRIDES =. "imx8dxl-ddr3l-evk:mx8dxl:mx8dxla1:"
-require conf/machine/imx8dxl-ddr3l-evk.conf
+require conf/machine/include/imx8dxl-ddr3l-evk.inc
+
+IMX_SOC_REV = "A1"
 
 KERNEL_DEVICETREE += " \
     freescale/imx8dxl-ddr3l-evk.dtb \
