--- a/meta-bsp/conf/machine/imx8dxla1-lpddr4-evk.conf
+++ b/meta-bsp/conf/machine/imx8dxla1-lpddr4-evk.conf
@@ -1,2 +1,3 @@
-MACHINEOVERRIDES =. "imx8dxl-lpddr4-evk:mx8dxl:mx8dxla1:"
-require conf/machine/imx8dxl-lpddr4-evk.conf
+require conf/machine/include/imx8dxl-lpddr4-evk.inc
+
+IMX_SOC_REV = "A1"
