--- a/meta-bsp/conf/machine/imx8dxlb0-lpddr4-evk.conf
+++ b/meta-bsp/conf/machine/imx8dxlb0-lpddr4-evk.conf
@@ -1,4 +1,5 @@
-MACHINEOVERRIDES =. "imx8dxl-lpddr4-evk:mx8dxl:mx8dxlb0:"
-require conf/machine/imx8dxl-lpddr4-evk.conf
+require conf/machine/include/imx8dxl-lpddr4-evk.inc
+
+IMX_SOC_REV = "B0"
 
 MACHINE_FEATURES:append:use-nxp-bsp = " optee"
