Align firmware recipes with upstream
Simple alignment expanding i.MX firmware, SECO, and SC firmware to mainline.

https://github.com/Freescale/meta-freescale/commit/93a4b871a83bb6921df3a5ab12b649daac85600b

Signed-off-by: Tom Hochstein <tom.hochstein@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -37,8 +37,8 @@ HOSTTOOLS_NONFATAL:append = " xxd cert-to-efi-sig-list"
 MACHINE_USES_VIVANTE_KERNEL_DRIVER_MODULE ?= "0"
 
 # Override for use-imx-security-controller-firmware.bbclass
-SECO_FIRMWARE_NAME:mx8dxl-nxp-bsp = "mx8dxl${IMX_SOC_REV_LOWER}-ahab-container.img"
-SECO_FIRMWARE_NAME:mx8ulp-nxp-bsp = "mx8ulpa2-ahab-container.img"
+SECO_FIRMWARE_NAME:mx8dxl-generic-bsp = "mx8dxl${IMX_SOC_REV_LOWER}-ahab-container.img"
+SECO_FIRMWARE_NAME:mx8ulp-generic-bsp = "mx8ulpa2-ahab-container.img"
 
 # Overrides for imx-base.inc
 IMX_DEFAULT_BSP = "nxp"
