imx8mpevk.conf: Add DTB file for board RevB4 [YOCIMX-6959]
Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -268,6 +268,33 @@ IMAGE_BOOT_FILES:append:imx8mn-ddr4-evk = " \
 #MACHINE_FEATURES_IMX_REMOVALS:append:imx8mp-lpddr4-evk = " jailhouse"
 MACHINE_FEATURES:append:imx8mp-lpddr4-evk = " optee nxp8997 dpdk"
 WKS_FILE_DEPENDS:append:imx8mp-lpddr4-evk = " imx-m7-demos"
+KERNEL_DEVICETREE:append:imx8mp-lpddr4-evk = " \
+    freescale/imx8mp-evk-revb4.dtb \
+    freescale/imx8mp-evk-revb4-basler.dtb \
+    freescale/imx8mp-evk-revb4-basler-ov5640.dtb \
+    freescale/imx8mp-evk-revb4-basler-ov2775.dtb \
+    freescale/imx8mp-evk-revb4-dpdk.dtb \
+    freescale/imx8mp-evk-revb4-dual-basler.dtb \
+    freescale/imx8mp-evk-revb4-dual-os08a20.dtb \
+    freescale/imx8mp-evk-revb4-dual-ov2775.dtb \
+    freescale/imx8mp-evk-revb4-ecspi-slave.dtb \
+    freescale/imx8mp-evk-revb4-flexcan2.dtb \
+    freescale/imx8mp-evk-revb4-it6263-lvds-dual-channel.dtb \
+    freescale/imx8mp-evk-revb4-jdi-wuxga-lvds-panel.dtb \
+    freescale/imx8mp-evk-revb4-ndm.dtb \
+    freescale/imx8mp-evk-revb4-os08a20.dtb \
+    freescale/imx8mp-evk-revb4-os08a20-ov5640.dtb \
+    freescale/imx8mp-evk-revb4-ov2775.dtb \
+    freescale/imx8mp-evk-revb4-ov2775-ov5640.dtb \
+    freescale/imx8mp-evk-revb4-pcie-ep.dtb \
+    freescale/imx8mp-evk-revb4-rm67191.dtb \
+    freescale/imx8mp-evk-revb4-rm67199.dtb \
+    freescale/imx8mp-evk-revb4-root.dtb \
+    freescale/imx8mp-evk-revb4-spdif-lb.dtb \
+    freescale/imx8mp-evk-revb4-usdhc1-m2.dtb \
+    freescale/imx8mp-evk-revb4-8mic-swpdm.dtb \
+    freescale/imx8mp-evk-revb4-8mic-revE.dtb \
+"
 IMAGE_BOOT_FILES:append:imx8mp-lpddr4-evk = " \
     imx8mp_m7_TCM_hello_world.bin \
     imx8mp_m7_TCM_low_power_wakeword.bin \
@@ -275,13 +302,13 @@ IMAGE_BOOT_FILES:append:imx8mp-lpddr4-evk = " \
     imx8mp_m7_TCM_rpmsg_lite_str_echo_rtos.bin \
     imx8mp_m7_TCM_sai_low_power_audio.bin \
 "
-KERNEL_DEVICETREE:append:imx8mp-lpddr4-evk = " \
-    freescale/imx8mp-evk-revA3-8mic-revE.dtb \
-"
 
 # Overrides for imx8mp-ddr4-evk
 #MACHINE_FEATURES_IMX_REMOVALS:append:imx8mp-ddr4-evk = " jailhouse"
 MACHINE_FEATURES:append:imx8mp-ddr4-evk = " optee nxp8997 dpdk"
+KERNEL_DEVICETREE:append:imx8mp-ddr4-evk = " \
+    freescale/imx8mp-ddr4-evk-revb4.dtb \
+"
 WKS_FILE_DEPENDS:append:imx8mp-ddr4-evk = " imx-m7-demos"
 IMAGE_BOOT_FILES:append:imx8mp-ddr4-evk = " \
     imx8mp_m7_TCM_hello_world.bin \
