--- a/meta-bsp/conf/machine/imx8_all.conf
+++ b/meta-bsp/conf/machine/imx8_all.conf
@@ -100,6 +100,7 @@ KERNEL_DEVICETREE += "freescale/imx8mq-evk-ak4497.dtb freescale/imx8mq-evk-audio
 KERNEL_DEVICETREE += " \
                      freescale/imx8mp-ab2.dtb \
                      freescale/imx8mp-ddr4-evk.dtb \
+                     freescale/imx8mp-ddr4-evk-revb4.dtb \
                      freescale/imx8mp-evk.dtb \
                      freescale/imx8mp-evk-basler.dtb freescale/imx8mp-evk-basler-ov2775.dtb freescale/imx8mp-evk-basler-ov5640.dtb \
                      freescale/imx8mp-evk-dpdk.dtb \
@@ -124,6 +125,31 @@ KERNEL_DEVICETREE += " \
                      freescale/imx8mp-evk-sof-wm8960.dtb freescale/imx8mp-evk-spdif-lb.dtb \
                      freescale/imx8mp-evk-usdhc1-m2.dtb \
                      freescale/imx8mp-evk-8mic-swpdm.dtb \
+                     freescale/imx8mp-evk-revb4.dtb \
+                     freescale/imx8mp-evk-revb4-basler.dtb \
+                     freescale/imx8mp-evk-revb4-basler-ov5640.dtb \
+                     freescale/imx8mp-evk-revb4-basler-ov2775.dtb \
+                     freescale/imx8mp-evk-revb4-dpdk.dtb \
+                     freescale/imx8mp-evk-revb4-dual-basler.dtb \
+                     freescale/imx8mp-evk-revb4-dual-os08a20.dtb \
+                     freescale/imx8mp-evk-revb4-dual-ov2775.dtb \
+                     freescale/imx8mp-evk-revb4-ecspi-slave.dtb \
+                     freescale/imx8mp-evk-revb4-flexcan2.dtb \
+                     freescale/imx8mp-evk-revb4-it6263-lvds-dual-channel.dtb \
+                     freescale/imx8mp-evk-revb4-jdi-wuxga-lvds-panel.dtb \
+                     freescale/imx8mp-evk-revb4-ndm.dtb \
+                     freescale/imx8mp-evk-revb4-os08a20.dtb \
+                     freescale/imx8mp-evk-revb4-os08a20-ov5640.dtb \
+                     freescale/imx8mp-evk-revb4-ov2775.dtb \
+                     freescale/imx8mp-evk-revb4-ov2775-ov5640.dtb \
+                     freescale/imx8mp-evk-revb4-pcie-ep.dtb \
+                     freescale/imx8mp-evk-revb4-rm67191.dtb \
+                     freescale/imx8mp-evk-revb4-rm67199.dtb \
+                     freescale/imx8mp-evk-revb4-root.dtb \
+                     freescale/imx8mp-evk-revb4-spdif-lb.dtb \
+                     freescale/imx8mp-evk-revb4-usdhc1-m2.dtb \
+                     freescale/imx8mp-evk-revb4-8mic-swpdm.dtb \
+                     freescale/imx8mp-evk-revb4-8mic-revE.dtb \
 "
 
 # DEVICETREE of i.MX 8QM
