--- a/meta-bsp/conf/machine/imx8mpevk.conf
+++ b/meta-bsp/conf/machine/imx8mpevk.conf
@@ -9,4 +9,5 @@ require conf/machine/imx8mp-lpddr4-evk.conf
 # Include device trees for other boards for internal test
 KERNEL_DEVICETREE += " \
     freescale/imx8mp-ddr4-evk.dtb \
+    freescale/imx8mp-ddr4-evk-revb4.dtb \
 "
