meta-bsp/conf/layer.conf: Add DTB file for i.MX 8MP EVK RevB4 [YOCIMX-6959]
Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/machine/imx8_all.conf
+++ b/meta-bsp/conf/machine/imx8_all.conf
@@ -135,6 +135,11 @@ KERNEL_DEVICETREE += " \
                      freescale/imx8mp-evk-revb4-dual-ov2775.dtb \
                      freescale/imx8mp-evk-revb4-ecspi-slave.dtb \
                      freescale/imx8mp-evk-revb4-flexcan2.dtb \
+                     freescale/imx8mp-evk-revb4-hifiberry-dacplus.dtb \
+                     freescale/imx8mp-evk-revb4-hifiberry-dacplusadc.dtb \
+                     freescale/imx8mp-evk-revb4-hifiberry-dac2.dtb \
+                     freescale/imx8mp-evk-revb4-iqaudio-dacpro.dtb \
+                     freescale/imx8mp-evk-revb4-iqaudio-dacplus.dtb \
                      freescale/imx8mp-evk-revb4-it6263-lvds-dual-channel.dtb \
                      freescale/imx8mp-evk-revb4-jdi-wuxga-lvds-panel.dtb \
                      freescale/imx8mp-evk-revb4-ndm.dtb \
@@ -146,6 +151,7 @@ KERNEL_DEVICETREE += " \
                      freescale/imx8mp-evk-revb4-rm67191.dtb \
                      freescale/imx8mp-evk-revb4-rm67199.dtb \
                      freescale/imx8mp-evk-revb4-root.dtb \
+                     freescale/imx8mp-evk-revb4-sof-wm8962.dtb \
                      freescale/imx8mp-evk-revb4-spdif-lb.dtb \
                      freescale/imx8mp-evk-revb4-usdhc1-m2.dtb \
                      freescale/imx8mp-evk-revb4-8mic-swpdm.dtb \
