meta-bsp/conf/layer.conf: Add 2 DTB files for i.MX 8MP EVK RevB4 [YOCIMX-6959]
Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -295,6 +295,8 @@ KERNEL_DEVICETREE:append:imx8mp-lpddr4-evk = " \
     freescale/imx8mp-evk-revb4-rm67191.dtb \
     freescale/imx8mp-evk-revb4-rm67199.dtb \
     freescale/imx8mp-evk-revb4-root.dtb \
+    freescale/imx8mp-evk-revb4-rpmsg.dtb \
+    freescale/imx8mp-evk-revb4-rpmsg-lpv.dtb \
     freescale/imx8mp-evk-revb4-sof-wm8962.dtb \
     freescale/imx8mp-evk-revb4-spdif-lb.dtb \
     freescale/imx8mp-evk-revb4-usdhc1-m2.dtb \
